tests/ui/nll/closure-requirements/type-test-subject-opaque-2.stderr
error[E0310]: the opaque type `iter1<'_>::{opaque#0}` may not live long enough
  --> $DIR/type-test-subject-opaque-2.rs:15:16
   |
LL |     let _ = || Bivar(iter1());
   |                ^^^^^^^^^^^^^^
   |
   = help: consider adding an explicit lifetime bound `iter1<'_>::{opaque#0}: 'static`...
   = note: ...so that the type `impl Iterator<Item = &'static str>` will meet its required lifetime bounds

error: `iter2<'_>::{opaque#0}<'_>` does not live long enough
  --> $DIR/type-test-subject-opaque-2.rs:16:16
   |
LL |     let _ = || Bivar(iter2());
   |                ^^^^^^^^^^^^^^

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0310`.
